--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-	"name": "app-name",
-	"productName": "App Name",
+	"name": "kleep",
+	"productName": "Kleep",
 	"version": "0.0.0",
-	"description": "The best app ever",
-	"license": "MIT",
-	"repository": "sindresorhus/electron-boilerplate",
+	"description": "",
+	"repository": "",
 	"author": {
-		"name": "Your Name",
-		"email": "user@gmail.com",
-		"url": "https://sindresorhus.com"
+		"name": "Andrew Oplas",
+		"email": "andrewmoplas@gmail.com"
 	},
 	"scripts": {
 		"postinstall": "electron-builder install-app-deps",
