--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"start": "electron .",
 		"pack": "electron-builder --dir",
 		"dist": "electron-builder --macos --linux --windows",
-		"release": "np"
+		"release": "np",
+		"scss": "sass --watch --no-source-map app/resources/scss:app/resources/css"
 	},
 	"dependencies": {
 		"electron-context-menu": "^0.15.0",
