Add datepicker and color selection

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"scss": "sass --watch --no-source-map app/resources/scss:app/resources/css"
 	},
 	"dependencies": {
+		"@chenfengyuan/datepicker": "^1.0.9",
 		"electron-context-menu": "^0.15.0",
 		"electron-debug": "^3.0.0",
 		"electron-store": "^5.1.0",
